apps/base/kube-ops-view/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-ops-view
    component: frontend
  name: kube-ops-view
spec:
  selector:
    application: kube-ops-view
    component: frontend
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 8080
